<resources>
    <string name="app_name">Kalender Spesial Indonesia</string>
    <string name="create_event">Buat Event</string>
    <string name="ok">OK</string>
    <string name="action_cancel">Batal</string>

    <string name="no_events">Tidak Ada Event</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="delete_header">Hapus Event?</string>
    <string name="add_event">Tambah Event</string>
    <string name="edit_event">Ubah Event</string>
    <!-- AdMob ad unit IDs -->
    <string name="preference_file_key">com.sms.sendsms.PREFERENCE_FILE_KEY</string>
    <string name="select_date">Pilih Tanggal Lalu Buat Event</string>
    <string name="settings">Settings</string>
    <string name="set_alarm">Atur Alarm</string>
    <string name="event_name">Nama Event</string>
    <string name="alarm_sound">Suara Alarm</string>
    <string name="sound">Suara</string>
    <string name="none">Tidak Ada</string>
    <string name="dismiss">Stop</string>
    <string name="share">Share</string>
    <string name="share_via">Share via</string>
    <string name="anthem_name">Indonesia Raya</string>
    <string name="doesnt_repeat">Alarm Hanya Sekali</string>
    <string name="every_day">Setiap Hari</string>
    <string name="every_month">Setiap Bulan</string>
    <string name="every_year">Setiap Tahun</string>
    <string name="color">Warna Kalender</string>
    <string name="rate">Mohon Berikan Rating</string>
</resources>